--- a/main.css
+++ b/main.css
@@ -25,13 +25,13 @@
     text-align: center;
     color: white;
     margin: auto;
-    margin-top: 100px;
     padding: 20px 0px;
+    padding-top: 100px;
   }
   .bottom {
     display: flex;
     flex-direction: row;
-    position: absolute;
+    position: fixed;
     height: 180px;
     width: 100%;
     bottom: 0;
